nav section completed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Developer Portfolio</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <h1>Basic Developer Portfolio</h1>
+    <section>
+        <nav>
+            <h3>M. Rahatul Islam</h3>
+            <button>Download Resume</button>
+        </nav>
+    </section>
 </body>
 </html>
