header section completed

--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic Developer Portfolio</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
     <section>
-        <nav>
-            <h3>M. Rahatul Islam</h3>
-            <button>Download Resume</button>
-        </nav>
+      <nav>
+        <h3>M. Rahatul Islam</h3>
+        <button>Download Resume</button>
+      </nav>
     </section>
-</body>
+    <section id="header-bg">
+      <header>
+        <img src="./assets/Group.png" alt="" />
+        <h1>"In the near future, I hope to become a Developer."</h1>
+        <p class="description">
+          Aspiring developer with a passion for technology, aiming to build
+          innovative solutions and continuously grow in the field of web
+          development.
+        </p>
+        <button>Contact with me</button>
+      </header>
+    </section>
+  </body>
 </html>
