added main section and header of why-dev, added bg

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <section>
-      <nav>
-        <h3>M. Rahatul Islam</h3>
-        <button>Download Resume</button>
-      </nav>
-    </section>
+    <nav>
+      <h3>M. Rahatul Islam</h3>
+      <button>Download Resume</button>
+    </nav>
     <section id="header-bg">
       <header>
         <img src="./assets/Group.png" alt="" />
@@ -25,5 +23,19 @@
         <button>Contact with me</button>
       </header>
     </section>
+    <main>
+      <section class="whyWebDev-section">
+        <div id="whyWebDev-div">
+          <h2 class="section-title">Why Web Development??</h2>
+          <p class="description">
+            Passionate about web development because it allows me to create
+            innovative, user-friendly websites. I enjoy solving complex
+            problems, bringing ideas to life, and continuously learning new
+            technologies to build functional and aesthetically pleasing digital
+            experiences.
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
