first card of whyWebDev done

--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
             experiences.
           </p>
         </div>
+        <article class="webDev-article">
+            <div>
+                <h4 class="article-title">I will Do Coding and Change The World</h4>
+                <p class="article-description">Through coding, I aim to innovate and solve real-world problems, creating impactful solutions that drive change.</p>
+                <button class="card-btn">Learn More</button>
+            </div>
+            <div>
+                <img src="./assets/Layer_1.png" alt="">
+            </div>
+           
+        </article>
+        <article>
+            <h4></h4>
+            <p></p>
+            <button></button>
+        </article>
+        <article>
+            <h4></h4>
+            <p></p>
+            <button></button>
+        </article>
       </section>
     </main>
   </body>
