whyWebDev section completed, added all the cards

--- a/index.html
+++ b/index.html
@@ -44,18 +44,28 @@
             <div>
                 <img src="./assets/Layer_1.png" alt="">
             </div>
-           
         </article>
-        <article>
-            <h4></h4>
-            <p></p>
-            <button></button>
+        <article class="webDev-article" id="webDev-article-2">
+            <div>
+                <h4 class="article-title">I will help People by creating Modern Web System</h4>
+                <p class="article-description">I am committed to helping people by developing modern web systems that enhance user experiences, streamline processes, and provide accessible solutions.</p>
+                <button class="card-btn">Learn More</button>
+            </div>
+            <div>
+                <img src="./assets/Group 3.png" alt="">
+            </div>
         </article>
-        <article>
-            <h4></h4>
-            <p></p>
-            <button></button>
+        <article class="webDev-article">
+            <div>
+                <h4 class="article-title">I will Do Coding and Change The World</h4>
+                <p class="article-description">Through coding, I aim to innovate and solve real-world problems, creating impactful solutions that drive change.</p>
+                <button class="card-btn">Learn More</button>
+            </div>
+            <div>
+                <img src="./assets/Group 4.png" alt="">
+            </div>
         </article>
+        
       </section>
     </main>
   </body>
