inspiration section done

--- a/index.html
+++ b/index.html
@@ -36,36 +36,70 @@
           </p>
         </div>
         <article class="webDev-article">
-            <div>
-                <h4 class="article-title">I will Do Coding and Change The World</h4>
-                <p class="article-description">Through coding, I aim to innovate and solve real-world problems, creating impactful solutions that drive change.</p>
-                <button class="card-btn">Learn More</button>
-            </div>
-            <div>
-                <img src="./assets/Layer_1.png" alt="">
-            </div>
+          <div>
+            <h4 class="article-title">I will Do Coding and Change The World</h4>
+            <p class="article-description">
+              Through coding, I aim to innovate and solve real-world problems,
+              creating impactful solutions that drive change.
+            </p>
+            <button class="card-btn">Learn More</button>
+          </div>
+          <div>
+            <img src="./assets/Layer_1.png" alt="" />
+          </div>
         </article>
         <article class="webDev-article" id="webDev-article-2">
-            <div>
-                <h4 class="article-title">I will help People by creating Modern Web System</h4>
-                <p class="article-description">I am committed to helping people by developing modern web systems that enhance user experiences, streamline processes, and provide accessible solutions.</p>
-                <button class="card-btn">Learn More</button>
-            </div>
-            <div>
-                <img src="./assets/Group 3.png" alt="">
-            </div>
+          <div>
+            <h4 class="article-title">
+              I will help People by creating Modern Web System
+            </h4>
+            <p class="article-description">
+              I am committed to helping people by developing modern web systems
+              that enhance user experiences, streamline processes, and provide
+              accessible solutions.
+            </p>
+            <button class="card-btn">Learn More</button>
+          </div>
+          <div>
+            <img src="./assets/Group 3.png" alt="" />
+          </div>
         </article>
         <article class="webDev-article">
-            <div>
-                <h4 class="article-title">I will Do Coding and Change The World</h4>
-                <p class="article-description">Through coding, I aim to innovate and solve real-world problems, creating impactful solutions that drive change.</p>
-                <button class="card-btn">Learn More</button>
-            </div>
-            <div>
-                <img src="./assets/Group 4.png" alt="">
-            </div>
+          <div>
+            <h4 class="article-title">I will Do Coding and Change The World</h4>
+            <p class="article-description">
+              Through coding, I aim to innovate and solve real-world problems,
+              creating impactful solutions that drive change.
+            </p>
+            <button class="card-btn">Learn More</button>
+          </div>
+          <div>
+            <img src="./assets/Group 4.png" alt="" />
+          </div>
         </article>
-        
+      </section>
+      <section id="inpiration-section">
+        <div>
+          <h2 class="section-title">My Inspiration</h2>
+          <p class="description">
+            My inspiration stems from the incredible individuals and stories
+            that drive innovation and creativity. I draw motivation from their
+            journeys, learning from their challenges and successes, and strive
+            to make a positive impact through my work.
+          </p>
+        </div>
+        <div id="inspiration-clip">
+          <iframe
+            width="1260"
+            height="710"
+            src="https://www.youtube.com/embed/RIUdYTEZNps?si=cjEGEURu5OGSWaNu"
+            title="YouTube video player"
+            frameborder="16"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
       </section>
     </main>
   </body>
