current target section completed

--- a/index.html
+++ b/index.html
@@ -101,6 +101,47 @@
           ></iframe>
         </div>
       </section>
+      <section class="target-section">
+        <div>
+          <h2 class="section-title">My Current Target</h2>
+          <p class="description">
+            My current target is to enhance my skills in web development by
+            mastering new technologies and frameworks. I aim to build impactful
+            projects that solve real-world problems and contribute to a
+            collaborative development community.
+          </p>
+        </div>
+        <article class="current-card-container">
+          <div class="current-target-card" id="current-card1-bg">
+            <img src="./assets/html.png" alt="" />
+            <h4 class="card-title">HTML</h4>
+            <p class="card-description">
+              HTML structures web content, defining elements like text and
+              links.
+            </p>
+            <a href="">Learn More</a>
+          </div>
+
+          <div class="current-target-card" id="current-card2-bg">
+            <img src="./assets/css.png" alt="" />
+            <h4 class="card-title">CSS</h4>
+            <p class="card-description">
+              CSS styles web pages, controlling layout, colors, and fonts.
+            </p>
+            <a href="">Learn More</a>
+          </div>
+
+          <div class="current-target-card" id="current-card3-bg">
+            <img src="./assets/js.png" alt="" />
+            <h4 class="card-title">JS</h4>
+            <p class="card-description">
+              JavaScript enables interactive and dynamic content
+              on websites.
+            </p>
+            <a href="">Learn More</a>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
