added next target section, all completed

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               HTML structures web content, defining elements like text and
               links.
             </p>
-            <a href="">Learn More</a>
+            <a class="card-ancor" href="">Learn More</a>
           </div>
 
           <div class="current-target-card" id="current-card2-bg">
@@ -128,17 +128,69 @@
             <p class="card-description">
               CSS styles web pages, controlling layout, colors, and fonts.
             </p>
-            <a href="">Learn More</a>
+            <a class="card-ancor" href="">Learn More</a>
           </div>
 
           <div class="current-target-card" id="current-card3-bg">
             <img src="./assets/js.png" alt="" />
             <h4 class="card-title">JS</h4>
             <p class="card-description">
-              JavaScript enables interactive and dynamic content
-              on websites.
+              JavaScript enables interactive and dynamic content on websites.
             </p>
-            <a href="">Learn More</a>
+            <a class="card-ancor" href="">Learn More</a>
+          </div>
+        </article>
+      </section>
+      <section class="target-section">
+        <div>
+          <h2 class="section-title">My Next Target</h2>
+          <p class="description">
+            My next project focuses on building innovative, user-friendly web
+            solutions that solve real-world problems and enhance user
+            experiences.I'm excited to apply new technologies and push my
+            development skills further.
+          </p>
+        </div>
+        <article class="next-target-card">
+          <figure>
+            <img src="./assets/react.png" alt="" />
+          </figure>
+          <div>
+            <h4 class="card-title">ReactJS</h4>
+            <p class="card-description">
+              ReactJS is a powerful JavaScript library for building fast,
+              interactive user interfaces. It simplifies the development of
+              single-page applications through reusable.
+            </p>
+            <a class="card-ancor" href="">Learn More</a>
+          </div>
+        </article>
+        <article class="next-target-card">
+          <figure>
+            <img src="./assets/nodejs.png" alt="" />
+          </figure>
+          <div>
+            <h4 class="card-title">NodeJs</h4>
+            <p class="card-description">
+              Node.js is a runtime environment that allows JavaScript to run on
+              the server, enabling fast, scalable, and efficient backend
+              development for web applications.
+            </p>
+            <a class="card-ancor" href="">Learn More</a>
+          </div>
+        </article>
+        <article class="next-target-card">
+          <figure>
+            <img src="./assets/mongodb.png" alt="" />
+          </figure>
+          <div>
+            <h4 class="card-title">MongoDB</h4>
+            <p class="card-description">
+              MongoDB is a NoSQL database that stores data in flexible,
+              JSON-like documents, making it ideal for modern applications
+              requiring scalability and fast data retrieval.
+            </p>
+            <a class="card-ancor" href="">Learn More</a>
           </div>
         </article>
       </section>
