updated next target card

--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
               interactive user interfaces. It simplifies the development of
               single-page applications through reusable.
             </p>
-            <a class="card-ancor" href="">Learn More</a>
+            <a
+              class="card-ancor" target="_blank"
+              href="https://medium.com/@rahatulth3at0nic/react-js-fundamentals-and-concepts-bd29d8b513bd"
+              >Learn More</a
+            >
           </div>
         </article>
         <article class="next-target-card">
@@ -176,7 +180,7 @@
               the server, enabling fast, scalable, and efficient backend
               development for web applications.
             </p>
-            <a class="card-ancor" href="">Learn More</a>
+            <a class="card-ancor" target="_blank" href="https://medium.com/@rahatulth3at0nic/javascript-5b0bec59020">Learn More</a>
           </div>
         </article>
         <article class="next-target-card">
@@ -190,7 +194,8 @@
               JSON-like documents, making it ideal for modern applications
               requiring scalability and fast data retrieval.
             </p>
-            <a class="card-ancor" href="">Learn More</a>
+            <a class="card-ancor" target="_blank" href="https://medium.com/@rahatulth3at0nic/javascript-5b0bec59020">Learn More</a>
+            <!-- added href link just to 'khayes mitate', nothing else, i will update it later ASAP with the actual article link, never mind. -->
           </div>
         </article>
       </section>
