added contact section, all completed

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
               single-page applications through reusable.
             </p>
             <a
-              class="card-ancor" target="_blank"
+              class="card-ancor"
+              target="_blank"
               href="https://medium.com/@rahatulth3at0nic/react-js-fundamentals-and-concepts-bd29d8b513bd"
               >Learn More</a
             >
@@ -180,7 +181,12 @@
               the server, enabling fast, scalable, and efficient backend
               development for web applications.
             </p>
-            <a class="card-ancor" target="_blank" href="https://medium.com/@rahatulth3at0nic/javascript-5b0bec59020">Learn More</a>
+            <a
+              class="card-ancor"
+              target="_blank"
+              href="https://medium.com/@rahatulth3at0nic/javascript-5b0bec59020"
+              >Learn More</a
+            >
           </div>
         </article>
         <article class="next-target-card">
@@ -194,10 +200,28 @@
               JSON-like documents, making it ideal for modern applications
               requiring scalability and fast data retrieval.
             </p>
-            <a class="card-ancor" target="_blank" href="https://medium.com/@rahatulth3at0nic/javascript-5b0bec59020">Learn More</a>
+            <a
+              class="card-ancor"
+              target="_blank"
+              href="https://medium.com/@rahatulth3at0nic/javascript-5b0bec59020"
+              >Learn More</a
+            >
             <!-- added href link just to 'khayes mitate', nothing else, i will update it later ASAP with the actual article link, never mind. -->
           </div>
         </article>
+      </section>
+      <section id="contact-sec-container">
+        <div id="contact-section">
+          <h2 id="contact-title">I need Support</h2>
+          <p id="contact-description">
+            If you have any questions or need assistance, feel free to reach
+            out. I’m here to help with any inquiries, projects.
+          </p>
+          <div id="contact-inp-container">
+            <input placeholder="Feel free to express your thoughts" id="contact-inp" type="text" />
+            <button id="contact-submit">Submit</button>
+          </div>
+        </div>
       </section>
     </main>
   </body>
