footer done, all completed, ready to final push, one more feature left

--- a/index.html
+++ b/index.html
@@ -218,11 +218,23 @@
             out. I’m here to help with any inquiries, projects.
           </p>
           <div id="contact-inp-container">
-            <input placeholder="Feel free to express your thoughts" id="contact-inp" type="text" />
+            <input
+              placeholder="Feel free to express your thoughts"
+              id="contact-inp"
+              type="text"
+            />
             <button id="contact-submit">Submit</button>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <h4>An open commitment by M. Rahatul Islam</h4>
+      <div>
+        <img src="./assets/facebook.png" alt="" />
+        <img src="./assets/github.png" alt="" />
+        <img src="./assets/linkedin-icon 1.png" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
