anchor to footer feature added, all completed, final push

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           innovative solutions and continuously grow in the field of web
           development.
         </p>
-        <button>Contact with me</button>
+        <button>
+          <a id="btn-anchor" href="#footer-section">Contact with me</a>
+        </button>
       </header>
     </section>
     <main>
@@ -228,7 +230,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="footer-section">
       <h4>An open commitment by M. Rahatul Islam</h4>
       <div>
         <img src="./assets/facebook.png" alt="" />
